--- a/flagd-hub-ui/src/App.css
+++ b/flagd-hub-ui/src/App.css
@@ -1,25 +1,12 @@
 .light-mode {
-  --primary-color: #3498db;
+  --primary-color: #2563eb;
   --secondary-color: #2c3e50;
   --accent-color: #e74c3c;
-  --background-color: #ecf0f1;
   --light-bg: #d8d9de;
   --dark-bg: #34495e;
   --font-family: 'Roboto', sans-serif;
   --transition-speed: 0.3s;
   --text-color: #83878c; /* Muted light gray for text or inactive elements */
-}
-
-
-.dark-mode {
-  --primary-color: #64819e; /* Facebook blue for highlights */
-  --secondary-color: #18191a; /* Near-black for primary background */
-  --accent-color: #4a4c4d; /* Medium-dark gray for accents */
-  --background-color: #33373C;
-  --border-radius: 8px;
-  --light-bg: #303439; /* Slightly lighter gray for containers */
-  --dark-bg: #b0b3b8; /* Muted light gray for text or inactive elements */
-  --text-color: #d4d7da; /* Muted light gray for text or inactive elements */
 }
 
 
@@ -41,7 +28,7 @@ header {
   background-color: var(--background-color);
   display: flex;
   height: 100%;
-  --primary-color: #3498db;
+  --primary-color:  #2563eb;
   --secondary-color: #2c3e50;
   --accent-color: #e74c3c;
   --background-color: #ecf0f1;
