--- a/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
+++ b/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
@@ -14,7 +14,7 @@
   .popup-form {
     background: white;
     padding: 20px;
-    border-radius: var(--border-radius);
+    border-radius: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     width: 400px;
     display: flex;
@@ -42,7 +42,7 @@
   
   .form-actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     gap: 10px;
   }
 
@@ -51,19 +51,20 @@
   }
   
 
-
-
-.form-button {
+  .form-button {
     padding: 10px 15px;
-    background-color: var(--primary-color);
-    color: white;
+    width: fit-content;
+    margin-left:10px;
+    background-color: var(--light-bg);
+    color: var(--dark-bg);
     border: none;
-    border-radius: var(--border-radius);
+    border-radius: 50px; /* Increased for a more rounded shape */
     cursor: pointer;
     font-size: 1rem;
     transition: background-color var(--transition-speed);
-  }
+  }  
   
   .form-button:hover {
-    background-color: var(--secondary-color); /* Change background color on hover */
+    background-color: var(--primary-color);
+    color: #fff;
   }
