--- a/flagd-hub-ui/src/pages/dashboard.css
+++ b/flagd-hub-ui/src/pages/dashboard.css
@@ -1,6 +1,6 @@
 .feature-flags {
     padding: 20px;
-    height: 500px;
+    height: 100%;
     border: 1px solid #1e1d1d; /* Optional: add border for better visibility */
   }
   
@@ -11,13 +11,20 @@
     margin-bottom: 20px;
   }
 
+  .no-feature-flags{
+    font-size: 30px;
+    display: flex;
+    padding-top: 20px;
+    justify-content: center;
+  }
+
   .search-bar {
     border: 1px solid #ccc;
     padding: 10px;
+    border-radius: 10px;
     background-color: var(--light-bg);
-    border-radius: var(--border-radius);
     font-size: 1rem;
-    width: 300px;
+    width: 170px;
   }
   
   .feature-cards {
@@ -47,6 +54,7 @@
   
   .button-radio-group {
     display: flex;
+    border-radius: 20px;
     gap: 10px;
     justify-content: center;
   }
@@ -74,6 +82,7 @@
   /* General container for button radio group */
 .button-radio-group {
   display: flex;
+  border-radius: 20px;
   justify-content: center;
   align-items: center;
   gap: 10px; /* Space between buttons */
@@ -93,7 +102,7 @@
   color: var(--dark-bg);
   background-color: var(--light-bg);
   border: 2px solid var(--primary-color);
-  border-radius: var(--border-radius);
+  border-radius: 10px;
   cursor: pointer;
   transition: all var(--transition-speed) ease-in-out;
 }
@@ -119,23 +128,27 @@
   color: #fff;
 }
 
+
 h3{
   color: var(--text-color)
 }
 
-.create-flag-button {
+.header-button {
   padding: 10px 15px;
-  width: 200px;
-  margin-right: 10px;
-  background-color: var(--primary-color);
-  color: white;
+  width: fit-content;
+  margin-left:10px;
+  background-color: var(--light-bg);
+  color: var(--dark-bg);
   border: none;
-  border-radius: var(--border-radius);
+  border-radius: 50px; /* Increased for a more rounded shape */
   cursor: pointer;
   font-size: 1rem;
   transition: background-color var(--transition-speed);
+}  
+
+.header-button:hover {
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
-.create-flag-button:hover {
-  background-color: var(--secondary-color); /* Change background color on hover */
-}
+
