--- a/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
+++ b/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
@@ -50,6 +50,13 @@
     color: black;
   }
   
+  .button-radio-group {
+    display: flex;
+    border-radius: 20px;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
   .form-button {
     padding: 10px 15px;
