--- a/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
+++ b/flagd-hub-ui/src/components/feature-flags/create-feature-flag-popop/CreateFeatureFlagPopup.css
@@ -1,84 +1,92 @@
 .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .popup-form {
-    background: white;
-    padding: 20px;
-    height: 900px;
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .popup-form h3 {
-    margin: 0;
-  }
-  
-  .popup-form label {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  
-  .popup-form input, 
-  .popup-form textarea, 
-  .popup-form select {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: var(--border-radius);
-  }
-  
-  .form-actions {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 
-  h3{
-    color: black;
-  }
-  
-  .button-radio-group {
-    display: flex;
-    border-radius: 20px;
-    gap: 10px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+.popup-form {
+  background: white;
+  padding: 1.25rem;
+  height: fit-content;
+  max-height: 45.25rem;
+  border-radius: 1.25rem;
+  box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 0.9375rem;
+}
 
-  .form-button {
-    padding: 10px 15px;
-    width: fit-content;
-    margin-left:10px;
-    background-color: var(--light-bg);
-    color: var(--dark-bg);
-    border: none;
-    border-radius: 50px; /* Increased for a more rounded shape */
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color var(--transition-speed);
-  }  
-  
-  .form-button:hover {
-    background-color: var(--primary-color);
-    color: #fff;
-  }
+.popup-form h3 {
+  margin: 0;
+}
 
+.popup-form label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3125rem;
+}
 
-input:focus-within{
+.flag-details {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Max 3 columns */
+  gap: 1rem; /* Space between inputs */
+  padding: 1.25rem;
+  max-width: 100%;
+}
+
+.popup-form input,
+.popup-form textarea,
+.popup-form select {
+  padding: 0.5rem;
+  border: 0.0625rem solid #ccc;
+  border-radius: var(--border-radius);
+}
+
+.form-actions {
+  display: flex;
+  justify-content: center;
+  gap: 0.625rem;
+}
+
+h3 {
+  color: black;
+}
+
+.button-radio-group {
+  display: flex;
+  border-radius: 1.25rem;
+  gap: 0.625rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.form-button {
+  padding: 0.625rem 0.9375rem;
+  width: fit-content;
+  margin-left: 0.625rem;
+  background-color: var(--light-bg);
+  color: var(--dark-bg);
+  border: none;
+  border-radius: 3.125rem; /* Increased for a more rounded shape */
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color var(--transition-speed);
+}
+
+.form-button:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+input:focus-within {
   border-color: var(--primary-color) !important;
 }
 
@@ -88,34 +96,50 @@ input:focus-within{
   cursor: not-allowed;
 }
 
-.variant-values-container {
+.input-values-container {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding: 10px;
+  gap: 0.625rem;
   background: #f9f9f9;
-  border-radius: 10px;
-  border: 1px solid #ddd;
+  width: 100%;
+  border-radius: 0.625rem;
+  border: 0.0625rem solid #ddd;
+}
+
+.input-values-container.variants {
+  overflow: auto;
+  max-height: 31.25rem;
+}
+
+.description-textarea {
+  resize: none;
 }
 
 .variant-row {
   display: flex;
   align-items: center;
-  gap: 10px;
+  padding: 5px;
+  gap: 0.625rem;
 }
 
 .variant-key {
   font-weight: bold;
   background: var(--light-bg);
-  padding: 5px 10px;
-  border-radius: 5px;
+  padding: 0.3125rem 0.625rem;
+  border-radius: 0.3125rem;
   color: var(--dark-bg);
+}
+
+.variant-key.select {
+  background-color: var(--primary-color);
+  color: white;
 }
 
 .variant-value-input {
   flex: 1;
-  padding: 8px;
-  border: 1px solid #ccc;
+  padding: 0.5rem;
+  border: 0.0625rem solid #ccc;
+  width: fit-content;
   border-radius: var(--border-radius);
   transition: border-color var(--transition-speed);
 }
