--- a/flagd-hub-ui/src/components/feature-flags/delete-confirmation-popup/DeleteConfirmationPopup.css
+++ b/flagd-hub-ui/src/components/feature-flags/delete-confirmation-popup/DeleteConfirmationPopup.css
@@ -1,50 +1,48 @@
 .popup-form {
-    background: white;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .popup-form h3 {
-    margin: 0;
-  }
-  
-  .popup-form label {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
-  
-  .popup-form input, 
-  .popup-form textarea, 
-  .popup-form select {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: var(--border-radius);
-  }
+  background: white;
+  padding: 1.25rem; 
+  border-radius: 1.25rem; 
+  box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.2); 
+  width: 25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.9375rem;
+}
 
-  .confirm-button {
-    padding: 10px 15px;
-    background-color: #2563eb;
-    color: #ffffff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1rem;
-  }
-  
-  .form-actions {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
+.popup-form h3 {
+  margin: 0;
+}
 
-  .confirm-button:hover {
-    background-color: #1e4cb0;
-  }
+.popup-form label {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3125rem;
+}
 
-  
+.popup-form input, 
+.popup-form textarea, 
+.popup-form select {
+  padding: 0.5rem;
+  border: 0.0625rem solid #ccc; 
+  border-radius: var(--border-radius);
+}
+
+.confirm-button {
+  padding: 0.625rem 0.9375rem;
+  background-color: #2563eb;
+  color: #ffffff;
+  border: none;
+  border-radius: 0.625rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.form-actions {
+  display: flex;
+  justify-content: center;
+  gap: 0.625rem;
+}
+
+.confirm-button:hover {
+  background-color: #1e4cb0;
+}
