--- a/flagd-hub-ui/src/components/popup/Popup.css
+++ b/flagd-hub-ui/src/components/popup/Popup.css
@@ -1,46 +1,45 @@
 /* Popup.css */
 .popup-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .popup {
-    background-color: white;
-    padding: 20px;
-    width: 200px;
-    border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    text-align: center;
-  }
-  
-  .popup h2 {
-    font-size: 1.6rem;
-    margin-bottom: 10px;
-  }
-  
-  .popup p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-  }
-  
-  .close-btn {
-    padding: 8px 15px;
-    background-color: #4a90e2;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .close-btn:hover {
-    background-color: #357abd;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup {
+  background-color: white;
+  padding: 1.25rem;
+  width: 12.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 0.9375rem rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.popup h2 {
+  font-size: 1.6rem;
+  margin-bottom: 0.625rem;
+}
+
+.popup p {
+  font-size: 1.2rem;
+  margin-bottom: 1.25rem;
+}
+
+.close-btn {
+  padding: 0.5rem 0.9375rem;
+  background-color: #4a90e2;
+  color: white;
+  border: none;
+  border-radius: 0.3125rem;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  background-color: #357abd;
+}
