--- a/flagd-hub-ui/src/pages/dashboard/dashboard.css
+++ b/flagd-hub-ui/src/pages/dashboard/dashboard.css
@@ -1,100 +1,99 @@
 .feature-flags {
-    padding: 20px;
-    height: 100%;
-    max-height: 100%;
-    overflow-y: hidden;
-  }
-  
-  .feature-flags-menu-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
+  padding: 1.25rem;
+  height: 100%;
+  max-height: 100%;
+  overflow-y: hidden;
+}
 
-  .no-feature-flags{
-    font-size: 30px;
-    display: flex;
-    padding-top: 20px;
-    justify-content: center;
-  }
+.feature-flags-menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
 
-  .search-bar {
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: var(--light-bg);
-    font-size: 1rem;
-    width: 170px;
-  }
-  
-  .feature-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px; /* Space between items */
-    padding: 20px;
-    box-sizing: border-box;
-    justify-content: flex-start;
-    overflow-y: auto;
-    overflow-x: hidden;
-    max-height: 90%;
-  }
+.no-feature-flags {
+  font-size: 1.875rem;
+  display: flex;
+  padding-top: 1.25rem;
+  justify-content: center;
+}
 
-  .feature-card {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: var(--border-radius);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform var(--transition-speed), box-shadow var(--transition-speed);
-    text-align: center;
-    outline: 10px black;
-    flex-grow: 0;
-  
-    /* Allow the cards to grow and shrink dynamically */
-    flex: 1 1 auto; 
-    min-width: 100px; /* Cards won't be smaller than this */
-    max-width: 400px; /* Cards won't be larger than this */
-    max-height: fit-content;
-    margin-bottom: 20px; /* Space between rows */
-  }
+.search-bar {
+  border: 0.0625rem solid #ccc;
+  padding: 0.625rem;
+  border-radius: 0.625rem;
+  background-color: var(--light-bg);
+  font-size: 1rem;
+  width: 10.625rem;
+}
 
-  .feature-card:only-child{
-    min-width: 100px; /* Cards won't be smaller than this */
-    max-width: fit-content; /* Cards won't be larger than this */
-  }
+.feature-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.875rem; /* Space between items */
+  padding: 1.25rem;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 90%;
+}
 
-  .feature-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-  }
-  
-  .button-radio-group {
-    display: flex;
-    border-radius: 20px;
-    gap: 10px;
-    justify-content: center;
-  }
-  
-  .button-radio {
-    padding: 10px 15px;
-    border: 1px solid #ddd;
-    border-radius: var(--border-radius);
-    background-color: #f9f9f9;
-    cursor: pointer;
-    transition: background-color var(--transition-speed);
-  }
-  
-  .button-radio.active {
-    background-color: var(--primary-color);
-    color: #fff;
-    border-color: var(--primary-color);
-  }
-  
-  .flagfs-actions{
-    display: flex;
-    flex-direction: row;
-  }
+.feature-card {
+  background-color: #fff;
+  padding: 1.25rem;
+  border-radius: var(--border-radius);
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+  transition: transform var(--transition-speed), box-shadow var(--transition-speed);
+  text-align: center;
+  outline: 0.055rem solid black;
+  flex-grow: 0;
 
+  /* Allow the cards to grow and shrink dynamically */
+  flex: 1 1 auto; 
+  min-width: 6.25rem; /* Cards won't be smaller than this */
+  max-width: 25rem; /* Cards won't be larger than this */
+  max-height: fit-content;
+  margin-bottom: 1.25rem; /* Space between rows */
+}
+
+.feature-card:only-child {
+  min-width: 6.25rem; /* Cards won't be smaller than this */
+  max-width: fit-content; /* Cards won't be larger than this */
+}
+
+.feature-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0.375rem 0.75rem rgba(0, 0, 0, 0.2);
+}
+
+.button-radio-group {
+  display: flex;
+  border-radius: 1.25rem;
+  gap: 0.625rem;
+  justify-content: center;
+}
+
+.button-radio {
+  padding: 0.625rem 0.9375rem;
+  border: 0.0625rem solid #ddd;
+  border-radius: var(--border-radius);
+  background-color: #f9f9f9;
+  cursor: pointer;
+  transition: background-color var(--transition-speed);
+}
+
+.button-radio.active {
+  background-color: var(--primary-color);
+  color: #fff;
+  border-color: var(--primary-color);
+}
+
+.flags-actions {
+  display: flex;
+  flex-direction: row;
+}
 
 /* Individual button-radio styles */
 .button-radio {
@@ -102,13 +101,13 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   font-weight: bold;
   text-align: center;
   color: var(--dark-bg);
   background-color: var(--light-bg);
-  border: 2px solid var(--primary-color);
-  border-radius: 10px;
+  border: 0.125rem solid var(--primary-color);
+  border-radius: 0.625rem;
   cursor: pointer;
   transition: all var(--transition-speed) ease-in-out;
 }
@@ -127,26 +126,24 @@
   pointer-events: none;
 }
 
-
 /* Add hover effect */
 .button-radio:hover {
   background-color: var(--primary-color);
   color: #fff;
 }
 
-
-h3{
-  color: var(--text-color)
+h3 {
+  color: var(--text-color);
 }
 
 .header-button {
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   width: fit-content;
-  margin-left:10px;
+  margin-left: 0.625rem;
   background-color: var(--light-bg);
   color: var(--dark-bg);
   border: none;
-  border-radius: 50px; /* Increased for a more rounded shape */
+  border-radius: 3.125rem; /* Increased for a more rounded shape */
   cursor: pointer;
   font-size: 1rem;
   transition: background-color var(--transition-speed);
@@ -156,5 +153,3 @@ h3{
   background-color: var(--primary-color);
   color: #fff;
 }
-
-
