--- a/flagd-hub-ui/src/pages/login/login.css
+++ b/flagd-hub-ui/src/pages/login/login.css
@@ -24,11 +24,11 @@
 
 .login-card {
   background: var(--light-overlay);
-  padding: 40px;
-  border-radius: 12px;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
-  width: 350px;
+  padding: 2.5rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 0.5rem 0.9375rem rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(0.625rem);
+  width: 21.875rem;
   align-items: center;
   color: #fff;
   display: flex;
@@ -36,34 +36,34 @@
 }
 
 .login-logo {
-  width: 190px;
+  width: 11.875rem;
   height: auto;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .login-title {
-  font-size: 1.75rem;
+  font-size: 1.1rem;
   font-weight: bold;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 1.25rem;
   width: 100%;
 }
 
 .login-input {
-  padding: 12px;
+  padding: 0.75rem;
   font-size: 1rem;
-  border: 2px solid transparent;
-  border-radius: 8px;
+  border: 0.125rem solid transparent;
+  border-radius: 0.5rem;
   background: rgba(44, 62, 80, 0.8); /* Ensure enough contrast */
   color: #ffffff; /* Visible text color */
   transition: all var(--transition-speed);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
 }
 
 .login-input::placeholder {
@@ -77,17 +77,17 @@
 }
 
 .login-button {
-  padding: 12px;
+  padding: 0.75rem;
   font-size: 1rem;
   background: var(--primary-color);
   border: none;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   cursor: pointer;
   --background-gradient: linear-gradient(120deg, #f3ec78, #af4261);
   color: #fff;
   font-weight: bold;
   transition: all var(--transition-speed);
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.25rem 0.625rem rgba(0, 0, 0, 0.2);
 }
 
 .login-button:hover {
@@ -96,7 +96,7 @@
 }
 
 .error-container {
-  height: 20px; /* Fixed height for consistent card size */
+  height: 1.25rem; /* Fixed height for consistent card size */
   display: flex;
   align-items: center;
   justify-content: center;
